2014-12-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.33 released.

2014-12-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.32 released.

2014-12-17  Carl Hetherington  <cth@carlh.net>

	* Fix "Show DCP" option on OS X and Windows.

2014-12-15  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.31 released.

2014-12-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.30 released.

2014-12-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.29 released.

2014-12-13  Carl Hetherington  <cth@carlh.net>

	* Add "copy to name" button to allow editing
	of ISDCF names after creation rather than the
	`replace-on-disable' hack.

2014-12-12  Carl Hetherington  <cth@carlh.net>

	* Fix a few missing checks for Cancel in dialogs (#449).

	* Version 1.76.28 released.

2014-12-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.27 released.

2014-12-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.26 released.

2014-12-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.25 released.

2014-12-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.24 released.

2014-12-09  Carl Hetherington  <cth@carlh.net>

	* Another attempt to fix slipping sync on DTS-encoded
	soundtracks (#352).

2014-12-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.23 released.

2014-12-05  c.hetherington  <cth@carlh.net>

	* Fix broken still-image import.

2014-12-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.22 released.

2014-12-04  Carl Hetherington  <cth@carlh.net>

	* Give a nicer error when writing config fails.

2014-12-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.21 released.

2014-12-04  c.hetherington  <cth@carlh.net>

	* Fix crash on dragging things in the timeline the second
	time it has been opened.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.20 released.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.19 released.

2014-12-03  c.hetherington  <cth@carlh.net>
