@@ -1,3 +1,8 @@
+2015-01-04  Carl Hetherington  <cth@carlh.net>
+
+	* Fix for non-playing of FFmpeg-decoded files
+	that return AVERROR_INVALIDDATA.
+
 2014-12-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.76.33 released.
